--- a/index.html
+++ b/index.html
@@ -3,150 +3,201 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pricing Plans</title>
+  <title>Phantom X | Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
-    body {
-      background: #121212;
-      color: #eee;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
-    #pricing {
+
+    body {
+      font-family: 'Orbitron', sans-serif;
+      background: #0d0d0d;
+      color: #eee;
+      line-height: 1.6;
+    }
+
+    header {
+      padding: 20px 40px;
+      background: #121212;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0, 255, 213, 0.05);
+    }
+
+    header h1 {
+      color: #00ffd5;
+      font-size: 1.8rem;
+    }
+
+    nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: #aaa;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #00ffd5;
+    }
+
+    .hero {
+      padding: 100px 20px;
+      text-align: center;
+      background: linear-gradient(to bottom, #0d0d0d 60%, #111);
+    }
+
+    .hero h2 {
+      font-size: 3rem;
+      color: #00ffd5;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      color: #ccc;
+    }
+
+    section#pricing {
       padding: 60px 20px;
-      max-width: 1000px;
+      max-width: 1200px;
       margin: 0 auto;
     }
-    #pricing h2 {
+
+    section#pricing h2 {
       text-align: center;
-      font-size: 2.5rem;
+      font-size: 2.8rem;
+      color: #00ffd5;
       margin-bottom: 40px;
     }
+
     .plans {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
     }
+
     .plan {
-      background: #1f1f1f;
+      background: rgba(255, 255, 255, 0.03);
+      border: 1px solid #00ffd5;
+      backdrop-filter: blur(12px);
       border-radius: 12px;
       padding: 30px;
-      flex: 1 1 280px;
-      max-width: 320px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.6);
-      display: flex;
-      flex-direction: column;
-      color: #eee;
-      position: relative;
+      width: 300px;
+      box-shadow: 0 0 15px rgba(0, 255, 213, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    .plan.pro {
-      background: linear-gradient(135deg, #9f5fff, #4f00ff);
-      color: #fff;
-      box-shadow: 0 0 25px rgba(159, 95, 255, 0.7);
+
+    .plan:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 0 25px rgba(0, 255, 213, 0.3);
     }
-    .plan.pro .badge {
-      position: absolute;
-      top: -12px;
-      right: -12px;
-      background: #ff4081;
-      color: white;
-      padding: 6px 14px;
-      border-radius: 50px;
-      font-weight: 700;
-      font-size: 0.85rem;
-    }
+
     .plan h3 {
-      font-size: 1.8rem;
-      margin-bottom: 15px;
+      font-size: 1.8em;
+      color: #00ffd5;
+      margin-bottom: 10px;
     }
-    .price {
-      font-size: 2rem;
-      font-weight: 700;
-      margin-bottom: 25px;
+
+    .plan .price {
+      font-size: 2em;
+      margin: 15px 0;
+      color: #f5f5f5;
     }
-    .price span {
-      font-weight: 400;
-      font-size: 1rem;
-    }
-    ul {
+
+    .plan ul {
       list-style: none;
       padding: 0;
-      margin-bottom: 30px;
-      flex-grow: 1;
+      margin: 20px 0;
     }
-    li {
-      margin-bottom: 12px;
+
+    .plan ul li {
+      margin: 10px 0;
+      color: #ccc;
     }
-    button {
-      width: 100%;
-      padding: 12px;
+
+    .plan button {
+      background: #00ffd5;
+      color: #0d0d0d;
       border: none;
-      border-radius: 8px;
-      font-weight: 600;
+      padding: 12px 20px;
+      border-radius: 6px;
+      font-size: 1em;
+      font-weight: bold;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: background 0.3s ease;
     }
-    .plan.free button {
-      background: #4caf50;
-      color: #121212;
+
+    .plan button:hover {
+      background: #00c4a7;
     }
-    .plan.pro button {
-      background: #fff;
-      color: #4f00ff;
-      font-weight: 700;
-    }
-    .plan.elite button {
-      background: #4caf50;
-      color: #121212;
-    }
-    button:hover {
-      opacity: 0.85;
+
+    @media (max-width: 768px) {
+      .plans {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
 <body>
 
+  <header>
+    <h1>Phantom X</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="#">Features</a>
+      <a href="#">Login</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h2>Dominate the Market. Silently.</h2>
+    <p>Signals, sniper zones, and AI protection — built for the Phantom.</p>
+  </section>
+
   <section id="pricing">
     <h2>Choose Your Plan</h2>
     <div class="plans">
-      
-      <div class="plan free">
-        <h3>Free</h3>
-        <p class="price">$0 <span>/ month</span></p>
+
+      <div class="plan">
+        <h3>Shadow</h3>
+        <div class="price">$9/month</div>
         <ul>
-          <li>Basic signals</li>
-          <li>Access to live dashboard</li>
-          <li>Community chat access</li>
+          <li>Basic Sniper Alerts</li>
+          <li>1 Asset (XAU/USD)</li>
+          <li>Weekly Market Map</li>
         </ul>
-        <button onclick="window.location.href='https://yourdomain.com/signup-free'">Get Started</button>
-      </div>
-      
-      <div class="plan pro">
-        <div class="badge">Popular</div>
-        <h3>Pro</h3>
-        <p class="price">$49 <span>/ month</span></p>
-        <ul>
-          <li>All basic features</li>
-          <li>Real-time sniper signals</li>
-          <li>Priority alerts & notifications</li>
-          <li>Exclusive market analysis</li>
-          <li>Access to premium education</li>
-        </ul>
-        <button onclick="window.location.href='https://buy.stripe.com/test_pro_plan_url'">Upgrade Now</button>
+        <button>Activate</button>
       </div>
 
-      <div class="plan elite">
-        <h3>Elite</h3>
-        <p class="price">$99 <span>/ month</span></p>
+      <div class="plan">
+        <h3>Pulse</h3>
+        <div class="price">$29/month</div>
         <ul>
-          <li>All Pro features</li>
-          <li>1-on-1 coaching & mentorship</li>
-          <li>Exclusive trade setups</li>
-          <li>Early access to app features</li>
-          <li>VIP community access</li>
+          <li>Multi-Asset Alerts</li>
+          <li>Smart Money Zones</li>
+          <li>Daily Market Flow</li>
+          <li>Early Phantom Journal Access</li>
         </ul>
-        <button onclick="window.location.href='https://buy.stripe.com/test_elite_plan_url'">Join Elite</button>
+        <button>Activate</button>
+      </div>
+
+      <div class="plan">
+        <h3>Phantom Core</h3>
+        <div class="price">$59/month</div>
+        <ul>
+          <li>All Pulse Features</li>
+          <li>Live Entry Signals</li>
+          <li>Trade Guardian AI</li>
+          <li>Private Community Access</li>
+        </ul>
+        <button>Activate</button>
       </div>
 
     </div>
