--- a/pricing.html
+++ b/pricing.html
@@ -1,62 +1,143 @@
-border: 1px solid #00ffd5;
-  border-radius: 12px;
-  padding: 30px;
-  width: 300px;
-  box-shadow: 0 0 15px rgba(0, 255, 213, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Phantom X | Pricing</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-.plan:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 0 25px rgba(0, 255, 213, 0.3);
-}
+    body {
+      background: #0d0d0d;
+      font-family: 'Orbitron', sans-serif;
+      color: #eee;
+    }
 
-.plan h3 {
-  font-size: 1.8em;
-  color: #00ffd5;
-  margin-bottom: 10px;
-}
+    .navbar {
+      background: #121212;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-.plan .price {
-  font-size: 2em;
-  margin: 15px 0;
-  color: #f5f5f5;
-}
+    .navbar h1 {
+      color: #00ffd5;
+      font-size: 1.8rem;
+    }
 
-.plan ul {
-  list-style: none;
-  padding: 0;
-  margin: 20px 0;
-}
+    .navbar nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: #ccc;
+      transition: color 0.3s ease;
+    }
 
-.plan ul li {
-  margin: 10px 0;
-  color: #ccc;
-}
+    .navbar nav a:hover {
+      color: #00ffd5;
+    }
 
-.plan button {
-  background: #00ffd5;
-  color: #0d0d0d;
-  border: none;
-  padding: 12px 20px;
-  border-radius: 6px;
-  font-size: 1em;
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
+    .hero {
+      padding: 100px 20px 40px;
+      text-align: center;
+    }
 
-.plan button:hover {
-  background: #00c4a7;
-}
+    .hero h2 {
+      font-size: 3rem;
+      color: #00ffd5;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      color: #aaa;
+      margin-top: 10px;
+    }
+
+    .pricing-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 40px 20px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .plan {
+      background: rgba(255, 255, 255, 0.03);
+      border: 1px solid #00ffd5;
+      backdrop-filter: blur(12px);
+      border-radius: 12px;
+      padding: 30px;
+      width: 300px;
+      box-shadow: 0 0 15px rgba(0, 255, 213, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .plan:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 0 25px rgba(0, 255, 213, 0.3);
+    }
+
+    .plan h3 {
+      font-size: 1.8em;
+      color: #00ffd5;
+      margin-bottom: 10px;
+    }
+
+    .plan .price {
+      font-size: 2em;
+      margin: 15px 0;
+      color: #f5f5f5;
+    }
+
+    .plan ul {
+      list-style: none;
+      padding: 0;
+      margin: 20px 0;
+    }
+
+    .plan ul li {
+      margin: 10px 0;
+      color: #ccc;
+    }
+
+    .plan button {
+      background: #00ffd5;
+      color: #0d0d0d;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 6px;
+      font-size: 1em;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .plan button:hover {
+      background: #00c4a7;
+    }
+
+    @media (max-width: 768px) {
+      .pricing-container {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
   </style>
 </head>
 <body>
+
   <header class="navbar">
     <h1>Phantom X</h1>
     <nav>
-      <a href="#">Home</a>
+      <a href="index.html">Home</a>
       <a href="#">Features</a>
-      <a href="#">Pricing</a>
       <a href="#">Login</a>
     </nav>
   </header>
@@ -102,5 +183,6 @@ border: 1px solid #00ffd5;
       <button>Activate</button>
     </div>
   </section>
+
 </body>
 </html>
