--- a/index.html
+++ b/index.html
@@ -2,206 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Phantom X | Home</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Orbitron', sans-serif;
-      background: #0d0d0d;
-      color: #eee;
-      line-height: 1.6;
-    }
-
-    header {
-      padding: 20px 40px;
-      background: #121212;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 2px 10px rgba(0, 255, 213, 0.05);
-    }
-
-    header h1 {
-      color: #00ffd5;
-      font-size: 1.8rem;
-    }
-
-    nav a {
-      margin-left: 20px;
-      text-decoration: none;
-      color: #aaa;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #00ffd5;
-    }
-
-    .hero {
-      padding: 100px 20px;
-      text-align: center;
-      background: linear-gradient(to bottom, #0d0d0d 60%, #111);
-    }
-
-    .hero h2 {
-      font-size: 3rem;
-      color: #00ffd5;
-      margin-bottom: 20px;
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-      color: #ccc;
-    }
-
-    section#pricing {
-      padding: 60px 20px;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    section#pricing h2 {
-      text-align: center;
-      font-size: 2.8rem;
-      color: #00ffd5;
-      margin-bottom: 40px;
-    }
-
-    .plans {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-    }
-
-    .plan {
-      background: rgba(255, 255, 255, 0.03);
-      border: 1px solid #00ffd5;
-      backdrop-filter: blur(12px);
-      border-radius: 12px;
-      padding: 30px;
-      width: 300px;
-      box-shadow: 0 0 15px rgba(0, 255, 213, 0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .plan:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 0 25px rgba(0, 255, 213, 0.3);
-    }
-
-    .plan h3 {
-      font-size: 1.8em;
-      color: #00ffd5;
-      margin-bottom: 10px;
-    }
-
-    .plan .price {
-      font-size: 2em;
-      margin: 15px 0;
-      color: #f5f5f5;
-    }
-
-    .plan ul {
-      list-style: none;
-      padding: 0;
-      margin: 20px 0;
-    }
-
-    .plan ul li {
-      margin: 10px 0;
-      color: #ccc;
-    }
-
-    .plan button {
-      background: #00ffd5;
-      color: #0d0d0d;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 6px;
-      font-size: 1em;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .plan button:hover {
-      background: #00c4a7;
-    }
-
-    @media (max-width: 768px) {
-      .plans {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>WealthMind Trader</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-
-  <header>
-    <h1>Phantom X</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="#">Features</a>
-      <a href="#">Login</a>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h2>Dominate the Market. Silently.</h2>
-    <p>Signals, sniper zones, and AI protection — built for the Phantom.</p>
-  </section>
-
-  <section id="pricing">
-    <h2>Choose Your Plan</h2>
-    <div class="plans">
-
-      <div class="plan">
-        <h3>Shadow</h3>
-        <div class="price">$9/month</div>
-        <ul>
-          <li>Basic Sniper Alerts</li>
-          <li>1 Asset (XAU/USD)</li>
-          <li>Weekly Market Map</li>
-        </ul>
-        <button>Activate</button>
-      </div>
-
-      <div class="plan">
-        <h3>Pulse</h3>
-        <div class="price">$29/month</div>
-        <ul>
-          <li>Multi-Asset Alerts</li>
-          <li>Smart Money Zones</li>
-          <li>Daily Market Flow</li>
-          <li>Early Phantom Journal Access</li>
-        </ul>
-        <button>Activate</button>
-      </div>
-
-      <div class="plan">
-        <h3>Phantom Core</h3>
-        <div class="price">$59/month</div>
-        <ul>
-          <li>All Pulse Features</li>
-          <li>Live Entry Signals</li>
-          <li>Trade Guardian AI</li>
-          <li>Private Community Access</li>
-        </ul>
-        <button>Activate</button>
-      </div>
-
+  <div class="container">
+    <h1>WealthMind Trader</h1>
+    <div class="price-box">
+      <p>EUR/USD Price: <span id="price">Loading...</span></p>
     </div>
-  </section>
 
+    <h2>Live Signals</h2>
+    <div id="signals-container" class="signals-box">
+      <!-- Signals will be injected here -->
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
